/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('com.googlecode.json-simple:json-simple:1.1.1')
    implementation('com.jfoenix:jfoenix:9.0.9')
    implementation('commons-validator:commons-validator:1.4.1')
    implementation('com.itextpdf:html2pdf:2.1.7')
    implementation('org.slf4j:slf4j-api:1.7.5')
    implementation('org.slf4j:slf4j-log4j12:1.7.5')
    implementation('org.docx4j:docx4j-ImportXHTML:8.0.0')
    implementation('org.docx4j:docx4j-core:8.0.0')
    implementation('org.docx4j:docx4j-openxml-objects-pml:8.0.0')
    implementation('org.docx4j:docx4j-openxml-objects-sml:8.0.0')
    implementation('org.docx4j:docx4j-JAXB-ReferenceImpl:8.0.0')
    implementation('org.glassfish.jaxb:jaxb-runtime:2.3.2')
    implementation('org.jvnet.staxex:stax-ex:1.8.1')
    implementation('javax.activation:activation:1.1')
    implementation('org.springframework:spring-web:5.2.5.RELEASE')
    //FATJAR:
    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
}

group = 'net.aclrian.messdiener'
version = '1.0.0'
mainClassName = 'net.aclrian.mpe.ApplikationStarter'
sourceCompatibility = '11'
targetCompatibility = '11'

javafx {
    version = "11"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', /*'javafx.graphics',*/ 'javafx.web']
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

run {
    jvmArgs = [
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
    ]
}

jar {
    manifest {
        attributes 'Main-Class': 'net.aclrian.mpe.ApplikationStarter'
    }

    from {
        (configurations.compile).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}
def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

dependencies {
    compile "org.openjfx:javafx-base:11:${platform}"
    // compile "org.openjfx:javafx-graphics:11:${platform}"
    compile "org.openjfx:javafx-controls:11:${platform}"
}